--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Sgsaputra
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Be yourself
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/sgptr/sgptr.github.io/master/images/mylogo.png
 
 #
 # Flags below are optional
@@ -21,8 +21,8 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
+  github: gsaputra
+  instagram:  
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
