--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/sgptr/sgptr.github.io/master/images/my
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email:  ptrbackup@hhotmail.com
   facebook:
   flickr:
   github: gsaputra
-  instagram:  
-  linkedin:
+  instagram: gsaputra_14 
+  linkedin: sgsaputra
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
